# soul

./: .gitignore  .mcp.json  Cargo.toml  README.md  VS-20.md  VS-30.md  VS-40.md  VS-60.md  Wikilinks.md  opencode.json  soul.toml.example
.archive/: VS-10.md  VS-40.md  VS-50.md
.codex/skills/collaboration-contract/: SKILL.md
.codex/skills/guided-implement/: SKILL.md
.codex/skills/implementation-planning/: SKILL.md
.codex/skills/optimize-plan/: SKILL.md
.docs/: ADR-0001 - Inline JSON Comments.md  ADR-0001: Inline JSON Comments.md  __workflow__.md  pdr.md
.docs/indexer/: markdown-annotations.md
.docs/interactions/: checkout.md
.opencode/agents/: pair-ask.md  pair-do.md  pair-teach.md  plan-reviewer.md
.opencode/commands/: optimize-plan.md
.soul/: .gitignore  soul.toml
.soul/templates/: annotation-syntax.md  audit-rubric-prompt.md  audit-rubric.md  doc-template-prompt.md  doc-template.md  gap-fill-plan-prompt.md  gap-fill-plan.md
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 0001_initial.up.sql
crates/indexer/src/: constants.rs  lib.rs
crates/indexer/src/annotation/: c_sharp.rs  mod.rs  normalized_annotation.rs  parser.rs  rust.rs
crates/indexer/src/annotation/loader/: loaded_plugin.rs  mod.rs  plugin_registry.rs
crates/indexer/src/config/: mod.rs  plugin_entry.rs  scan_config.rs  soul_config.rs
crates/indexer/src/error/: annotation.rs  mod.rs
crates/indexer/src/graph/: explain_result.rs  mod.rs
crates/indexer/src/index/: mod.rs
crates/indexer/src/markdown/: annotations.rs  frontmatter.rs  frontmatter_block.rs  mod.rs
crates/indexer/src/mcp/: annotation_syntax_params.rs  explain_params.rs  format.rs  mod.rs
crates/indexer/src/model/: annotation_syntax.rs  code_annotation.rs  diagnostic.rs  diagnostic_severity.rs  document.rs  mod.rs  parse_report.rs  semantic_graph.rs
crates/indexer/src/scan/: candidate_kind.rs  mod.rs  scan_candidate.rs
crates/indexer/src/tests/: graph.rs  markdown.rs  mod.rs  plugin_helper.rs  scan.rs
crates/indexer/tests/: explain.rs
crates/soul-attributes/: Cargo.toml  README.md
crates/soul-attributes/src/: lib.rs
crates/soul-attributes/src/error/: mod.rs
crates/soul-attributes/tests/: compile_fail.rs  compile_pass.rs
crates/soul-attributes/tests/ui/: duplicate_keys.rs  duplicate_keys.stderr  empty_required_value.rs  empty_required_value.stderr  missing_id.rs  missing_id.stderr  non_identifier_key.rs  non_identifier_key.stderr  non_string_value.rs  non_string_value.stderr  valid_attribute.rs
crates/soul-lsp/: Cargo.toml
crates/soul-lsp/src/: cli.rs  main.rs  server.rs
crates/soul-plugin-csharp/: Cargo.toml
crates/soul-plugin-csharp/src/: lib.rs
crates/soul-plugin-rust/: Cargo.toml
crates/soul-plugin-rust/src/: lib.rs
crates/soul-plugin-sdk/: Cargo.toml
crates/soul-plugin-sdk/src/: error.rs  helpers.rs  lib.rs  normalized_annotation.rs  parser.rs  root_module.rs
docs/: doc-references.md  indexer.explain.md  indexer.scan-repository.md
fixtures/: backend.rs  frontend.cs
