[workspace]
members = [
    "crates/indexer",
    "crates/soul-attributes"
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
repository = "https://github.com/TonyMarkham/soul"

[workspace.dependencies]
clap           = { version = "4.6.0", features = ["derive"] }
error-location = { version = "0.1.0" }
# ** CTITICAL **  libsqlite3-sys  MUST use v0.30
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
proc-macro2    = { version = "1.0.106" }
quote          = { version = "1.0.45" }
rmcp           = { version = "1.4.0", features = ["server", "transport-io"] }
rusqlite       = { version = "0.39.0" }
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = { version = "1.0.149" }
serde_yaml     = { version = "0.9.33" }
sqlx           = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
syn            = { version = "2.0.117", features = ["parsing", "full"] }
tempfile       = { version = "3.27.0" }
thiserror      = { version = "2.0.18" }
tokio          = { version = "1.51.1", features = ["rt", "macros", "rt-multi-thread"] }
toml           = { version = "0.9.8" }
trybuild       = { version = "1.0.116" }
walkdir        = { version = "2.5.0" }

soul-attributes = { path = "crates/soul-attributes" }
