[workspace]
members = [
    "crates/indexer",
    "crates/soul-attributes",
    "crates/soul-plugin-sdk",
    "crates/soul-plugin-rust",
    "crates/soul-plugin-csharp", "crates/soul-lsp",
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
repository = "https://github.com/TonyMarkham/soul"

[workspace.dependencies]
abi_stable       = { version = "0.11.3" }
clap             = { version = "4.6.0", features = ["derive"] }
error-location   = { version = "0.1.0" }
proc-macro2      = { version = "1.0.106" }
quote            = { version = "1.0.45" }
rmcp             = { version = "1.4.0", features = ["server", "transport-io"] }
rusqlite         = { version = "0.39.0" }
serde            = { version = "1.0.228", features = ["derive"] }
serde_json       = { version = "1.0.149" }
serde_yaml       = { version = "0.9.33" }
sqlx             = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
syn              = { version = "2.0.117", features = ["parsing", "full"] }
tempfile         = { version = "3.27.0" }
thiserror        = { version = "2.0.18" }
tokio            = { version = "1.51.1", features = ["rt", "macros", "rt-multi-thread", "io-std", "sync"] }
toml             = { version = "0.9.8" }
tower-lsp-server = { version = "0.23.0" }
trybuild         = { version = "1.0.116" }
walkdir          = { version = "2.5.0" }

indexer          = { path = "crates/indexer" }
soul-attributes  = { path = "crates/soul-attributes" }
soul-plugin-sdk  = { path = "crates/soul-plugin-sdk" }
