[package]
name = "indexer"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
error-location = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
serde_yaml     = { workspace = true }
syn            = { workspace = true }
thiserror      = { workspace = true }
walkdir        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
