[package]
name = "indexer"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
abi_stable      = { workspace = true }
clap            = { workspace = true }
error-location  = { workspace = true }
rmcp            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serde_yaml      = { workspace = true }
sqlx            = { workspace = true }
syn             = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
toml            = { workspace = true }
walkdir         = { workspace = true }

soul-attributes = { workspace = true }
soul-plugin-sdk = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true }

soul-attributes = { workspace = true }
soul-plugin-sdk = { workspace = true }
