[package]
name = "soul-attributes"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
error-location = { workspace = true }
proc-macro2    = { workspace = true }
quote          = { workspace = true }
serde_json     = { workspace = true }
syn            = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
