[package]
name = "soul-attributes"
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Proc-macro attributes for annotating code with Soul semantic IDs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
error-location = { workspace = true }
quote          = { workspace = true }
syn            = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
